# redditscrapping

./: .gitignore  CHANGELOG.md  DEPLOY.md  README.md  RGIG.md  SONARPRO_TESTING_GUIDE.md  ai_lead_evaluation.md  airesponse.md  all_titles.txt  analyze_scoring.py  analyze_spam_30.py  analyze_users.py  antiban.md  architecture.md  branding.md  broad_search.py  check_actual_schema.py  check_db.py  check_db_keywords.py  check_dupes.py  check_health.py  check_post_body.py  check_post_comments.py  check_schema.py  check_scores.py  check_signals.py  check_spam.py  check_state.py  cleanup_db.py  debug_duplicates.py  debug_engine.py  debug_output.txt  debug_query.py  debug_report.txt  debug_results.txt  deployment_guide.md  diag_db.py  discover_subreddits.py  evaluate_leads_gpt4o.py  final_run.txt  (+48 more)
outputs/reports/: comprehensive_scoring_audit_20260112.md  profitdoctor_direct_fit_report.md  profitdoctor_intensity_report.md  profitdoctor_opportunity_report.md  profitdoctor_report.md  scoring_audit_20260112.md  socialgenius_direct_fit_report.md  socialgenius_intensity_report.md  socialgenius_opportunity_report.md  sonarpro_direct_fit_report.md  sonarpro_intensity_report.md
radar/: celery_app.py  cli.py  config.py  products.py
radar/api/: auth.py  main.py
radar/ingest/: reddit_api.py  reddit_scraper.py
radar/models/: response.py
radar/process/: ai_analysis.py  embeddings.py  semantic.py  signals.py  truncation.py
radar/services/: __init__.py  product_service.py  (+3 more)
tests/: conftest.py  test_api_sync.py  test_db_isolation.py
web/: index.html  package-lock.json  package.json
(+10 files in other folders)
